# chomp

./: .gas-snapshot  .gitignore  ANALYSIS_BATCHED_GAS.md  CHANGELOG.md  CLAUDE.md  GAS_AUDIT.md  GAS_OPTIMIZATION.md  OPT_PLAN.md  PHASE1-BRIEF.md  PHASE2-CHANGES-fixedmoves.md  PHASE3-CHANGES-effects.md  PHASE3-CHANGES-timestamp-tombstone.md  PLAN.md  STRONG_CPU.md  deployments.json  foundry.toml  interface-preferences.json  todo.txt
client/: index.ts  package.json  tsconfig.json
client/lib/: battle.service.ts  metadata-converter.ts  types.ts
client/scripts/: extract-move-metadata.ts
docs/: DOUBLES_KIT_RULINGS.md  MOVE_VM_DESIGN.md  MOVE_VM_RESEARCH.md  design.md  extruder.md  prompt.md  stomp_2.md  stomp_intro.md
drool/: abilities.csv  index.html  mon-stats.js  mons.csv  moves.csv  style.css  types.csv  utils.js
drool/imgs/: make_icons.py  mon_shadow.json  scale_gifs.py  scale_gifs.sh  spritesheet.json
processing/: addressPacking.py  buildDamageGifs.py  buildTypeChart.py  createAddressAndABIs.py  createMonShadows.py  createMonSpritesheets.py  dep_graph.py  deploy.py  generateEip712Meta.py  generateEventLayouts.py  generateMonYaml.py  generateMonsTypeScript.py  generateSetupCPU.py  generateSolidity.py  generateTypeMetadata.py  generate_incremental.py  generate_type_chart.py  packMoves.py  parse_desync_report.py  types_enum.py  validateEffectBitmaps.py  validateMoves.py
script/: DeployEffectsCreate3.s.sol  EngineAndPeriphery.s.sol  SetupCPU.s.sol  SetupMons.s.sol  Surgery.s.sol  cpu-teams.json
scripts/transpiler/: .gitignore  CHANGELOG.md  package-lock.json  package.json  sol2ts.py  test_transpiler.py  tsconfig.json
sims/: .gitignore  README.md  run.ts  runs.jsonl  tsconfig.json
sims/arena/: bench-doubles.ts  bench-search.ts  mon-data.ts  probe-greedy-scores.ts  probe-initialize.ts  smoke-games.ts  walk.ts  winrate-search.ts
sims/reports/: data.json  (+1 more)
snapshots/: BatchInstrumentationTest.json  BetterCPUInlineGasTest.json  DoublesGasBenchmark.json  EngineGasTest.json  EngineOptimizationTest.json  FullyOptimizedInlineGasTest.json  InlineEngineGasTest.json  MainnetReplayGasTest.json  MatchmakerTest.json  ProdPvPGasBenchmark.json  StandardAttackPvPGasTest.json  StartBattleGasTest.json
src/: Constants.sol  DefaultCommitManager.sol  DefaultRuleset.sol  DefaultValidator.sol  Engine.sol  Enums.sol  FastCommitManager.sol  IEngine.sol  IEngineHook.sol  IValidator.sol  Structs.sol
tasks/: phase2-fixed-moves.md  phase2-freestoragekeys.md  phase2-standardattack.md  phase3-effects-optimization.md  phase3-timestamp-tombstone.md
test/: BatchAccessProfileRealisticTest.sol  BatchAccessProfileTest.sol  BatchEdgeTest.sol  BatchEquivalenceTest.sol  BatchGasTest.sol  BatchInstrumentationTest.sol  BatchShadowProbeTest.sol  BatchedCPUGasTest.sol  BatchedCPUTest.sol  BattleHistoryTest.sol  BetterCPUInlineGasTest.sol  BetterCPUTest.sol  BufferSubmissionTest.sol  CPUBatchGasTest.sol  CPUBatchTest.sol  CPUBundledCreateExecuteGasTest.t.sol  CPUTest.sol  DefaultCommitManagerTest.sol  DoublesCommitManagerTest.sol  DoublesDispatchStatusTest.sol  DoublesEffectBugsTest.sol  DoublesEngineTest.sol  DoublesFlowsTest.sol  DoublesGasBenchmark.t.sol  DoublesValidationTest.sol  EngineBuiltInBufferTest.sol  EngineDualSignedDirectTest.sol  EngineGasTest.sol  EngineGlobalKVTest.sol  EngineMoveAPITest.sol  EngineOptimizationTest.sol  EngineTest.sol  FairCPUTest.sol  FastCommitManager.t.sol  FastCommitManagerGasBenchmark.t.sol  FlowEquivalenceTest.sol  FullyOptimizedInlineGasTest.sol  GachaFacetsBattleTest.sol  GachaMigrationTest.sol  GachaTeamRegistryTest.sol  (+23 more)
tools/effect-miner/: Cargo.toml
tools/effect-miner/src/: create3.rs  main.rs  miner.rs
transpiler/: .gitignore  CHANGELOG.md  MIGRATION.md  OPTIMIZATION_PLAN.md  README.md  __init__.py  dependency-overrides.json  init.py  interface-properties.json  lowering.py  package-lock.json  package.json  pyproject.toml  runtime-replacements.json  sol2rs.py  sol2ts.py  sol2ts_refactored.py  test_transpiler.py  transpiler-config-rust.json  transpiler-config.json  tsconfig.json
transpiler/ffi-rs/: Cargo.toml
transpiler/ffi-rs/src/: lib.rs
transpiler/runtime-rs/: Cargo.toml
transpiler/runtime-rs/src/: lib.rs
transpiler/strategies-rs/: Cargo.toml
transpiler/strategies-rs/src/: analysis.rs  arena.rs  breadth.rs  doubles.rs  evaluator.rs  faceoff.rs  game.rs  greedy.rs  hard.rs  heuristic.rs  jsrng.rs  lib.rs  matrix.rs  mock.rs  mock2.rs  native.rs  nopeek.rs  override_cpu.rs  roster.rs  search.rs  shared.rs  sim.rs  teams.rs  view.rs  yomi.rs
(+432 files in other folders)
