[package]
name = "effect-miner"
version = "0.1.0"
edition = "2021"
description = "Vanity address miner for Effect contracts using CREATE3"

[dependencies]
# Ethereum primitives and hashing
alloy-primitives = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Parallel processing
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# Hex encoding/decoding
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
