[package]
name = "effect-miner"
version = "0.1.0"
edition = "2021"
description = "Vanity address miner for Effect contracts using CREATE3"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
