# chomp-strategies: native port of the arena CPU strategies (hard, greedy,
# override) plus the game/decide loop, driving the transpiled engine
# in-process (batch mode — one FFI crossing per BATCH instead of per read).
#
# Ported move-for-move against the TS strategies (verified by the retired
# lockstep gates); the stacks are now decoupled — future Rust changes need
# not preserve bit-identicality.
[package]
name = "chomp-strategies"
version = "0.1.0"
edition = "2021"

[dependencies]
chomp-engine = { path = "../engine" }
chomp-rt = { path = "../runtime" }
